--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 
     <div class="header">
       <div class="container">
-        <div>
+        <div class="hero-main-text">
           <h1>This website is awesome</h1>
           <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is
             lower
             contrast</p>
           <button>Sign up</button>
         </div>
-        <div class="image-placeholder"></div>
+        <div class="image-placeholder">This is a place for an image</div>
       </div>
     </div>
 
