Add section with a header and text boxes below
This section has a title with some boxes below that will feature some
illustrations or images. This is the third section of the project,
after the nav bar and the section containing the Hero Text.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
         </ul>
       </div>
     </nav>
-
     <div class="header">
       <div class="container">
         <div class="hero-main-text">
@@ -36,23 +35,34 @@
         <div class="image-placeholder">This is a place for an image</div>
       </div>
     </div>
-
-    <div class="container">
-      <h2>Some random information.</h2>
-      <div class="boxes">
-        <div class="box-1"></div>
-        <div class="box-2"></div>
-        <div class="box-3"></div>
-        <div class="box-4"></div>
+    <div class="section">
+      <div class="container">
+        <h2>Some random information.</h2>
+        <div class="boxes">
+          <div class="item">
+            <div class="box"></div>
+            <div class="text">This is some subtext under an illustration or image</div>
+          </div>
+          <div class="item">
+            <div class="box"></div>
+            <div class="text">This is some subtext under an illustration or image</div>
+          </div>
+          <div class="item">
+            <div class="box"></div>
+            <div class="text">This is some subtext under an illustration or image</div>
+          </div>
+          <div class="item">
+            <div class="box"></div>
+            <div class="text">This is some subtext under an illustration or image</div>
+          </div>
+        </div>
       </div>
     </div>
-
     <div class="container">
       <h3 class="quote">This is an aspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
         or maybe people will actually read it. Who knows? All I know is that it looks nice.</h3>
       <p>-Thor, God of Thunder</p>
     </div>
-
     <div class="container">
       <div class="sign-up-box">
         <div class="text">
@@ -64,7 +74,6 @@
         </div>
       </div>
     </div>
-
     <footer>
       <p>Copyright (COLOCAR UM C AQUI) The Odin Project 2023</p>
     </footer>
