Add quote section and style it in css

--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
         </div>
       </div>
     </div>
-    <div class="container">
-      <h3 class="quote">This is an aspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
-        or maybe people will actually read it. Who knows? All I know is that it looks nice.</h3>
+    <div class="quote-section">
+      <h3>This is an aspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
+        or maybe people will actually read it. Who knows? All I know is that it looks nice.
+      </h3>
       <p>-Thor, God of Thunder</p>
     </div>
     <div class="container">
