--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </div>
     </div>
     <footer>
-      <p>Copyright (COLOCAR UM C AQUI) The Odin Project 2023</p>
+      <p>Copyright &copy; The Odin Project 2023</p>
     </footer>
   </body>
 </html>
