Add some hover effects to buttons and links

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             contrast</p>
           <button>Sign up</button>
         </div>
-        <div class="image-placeholder">This is a place for an image</div>
+        <div class="image-placeholder">This is a placeholder for an image</div>
       </div>
     </div>
     <div class="section">
